@@ -43,7 +43,7 @@ public class IJAtom extends Atom {
 	CharBox I = new CharBox(env.getTeXFont().getChar(upper ? 'I' : 'i', "mathnormal", env.getStyle()));
 	CharBox J = new CharBox(env.getTeXFont().getChar(upper ? 'J' : 'j', "mathnormal", env.getStyle()));
 	HorizontalBox hb = new HorizontalBox(I);
-	hb.add(new SpaceAtom(TeXConstants.UNIT_EM, -0.15f, 0, 0).createBox(env));
+	hb.add(new SpaceAtom(TeXConstants.UNIT_EM, -0.065f, 0, 0).createBox(env));
 	hb.add(J);
 	return hb;
     } 
